--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,11 +1,9 @@
-
-body {
-  margin: 0;
-  display: grid;
-  grid-auto-flow: column;
-  place-content: center;
-  background: #b6e2fd;
-
+.profile{
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 4rem;
+  line-height: 2;
+  text-align: center;
 }
 
 .list-group-item+.list-group-item {
@@ -18,8 +16,7 @@ body {
 
 }
 
-img,
-svg {
+.profile img {
   display: block;
   margin-left: auto;
   margin-right: auto;
