--- a/src/components/About.css
+++ b/src/components/About.css
@@ -10,8 +10,12 @@ body {
   text-align: center;
 }
 
+.mission {
+    padding-bottom: 3rem;
+}
+
 article {
-  margin-bottom: 3rem;
+  margin-bottom: 5rem;
 }
 
 .team h2 {
@@ -19,14 +23,14 @@ article {
   margin-right: auto;
 }
 
-h2 {
+.aboutBody h2 {
   border-bottom: 1px solid grey;
   font-size: 40px;
   font-weight: 500;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 
 .carouselParent {
@@ -34,15 +38,29 @@ h2 {
   max-width: 40rem;
   margin-left: auto;
   margin-right: auto;
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.4);
+}
+
+.tools {
+    margin-top: 8rem;
+}
+
+.carouselBio {
+    background-color: rgb(106, 104, 104, 0.6);
 }
 
 .imgContainer {
     background: linear-gradient(90deg, rgb(158, 167, 228) 6%, rgba(221, 255, 249, 1) 50%, rgb(158, 167, 228) 94%);
     border-radius: 10px;
     padding: 3rem;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.4);
 }
 
 .imgContainer img {
-    padding: 1rem;
+    padding: 1.5rem;
+}
+
+.team p {
+  margin-bottom: 3rem;
 }
 
