--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,13 +1,3 @@
-
-body {
-  margin: 0;
-  display: grid;
-  grid-auto-flow: column;
-  place-content: center;
-  background: #b6e2fd;
-
-}
-
 .list-group-item+.list-group-item {
   border-bottom-width: 5px;
   text-align: center;
@@ -18,8 +8,7 @@ body {
 
 }
 
-img,
-svg {
+.profile img{
   display: block;
   margin-left: auto;
   margin-right: auto;
