--- a/src/components/Items.css
+++ b/src/components/Items.css
@@ -2,8 +2,11 @@
   margin-left: auto;
   margin-right: auto;
   width: 80%;
-  padding: 1px;
   text-align: center;
+}
+
+.catalog    {
+  box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
 }
 
 .bored {
@@ -19,9 +22,14 @@
   width: 150px;
   padding: 10px;
   text-align: center;
-  margin-top: 15px;
+  margin-top: 2rem;
 }
 
 .catalogBody h2 {
-  padding-top: 1rem;
+  padding: 2rem;
+}
+
+.actionButtons {
+  display: flex;
+  justify-content: space-around;
 }
